2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Normalize public interface.
	* include/liboptimization/generic-solver.hh,
	* include/liboptimization/problem.hh,
	* include/liboptimization/problem.hxx,
	* include/liboptimization/solver-error.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/solver.hxx,
	* include/liboptimization/twice-derivable-function.hh,
	* src/cfsqp.cc,
	* src/doc.hh,
	* src/generic-solver.cc,
	* src/ipopt.cc,
	* tests/cfsqp.cc,
	* tests/ipopt.cc,
	* tests/simple-test.cc: Replace getXxx method by xxx.
        Replace struct by class.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement LinearFunction::hessian.
	* .gitignore: Ignore _build* directories (useful for cross-compiling).
	* include/liboptimization/derivable-function.hh,
	* include/liboptimization/fwd.hh,
	* include/liboptimization/ipopt.hh: Document, fix coding style.
	* include/liboptimization/linear-function.hh: Implement hessian.
	* include/liboptimization/problem.hh,
	* include/liboptimization/quadratic-function.hh,
	* include/liboptimization/solver.hh,
	* include/liboptimization/twice-derivable-function.hh,
	* src/cfsqp.cc: Document, fix coding style.
	* src/linear-function.cc: Implement hessian.

2009-04-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Split linear/non-linear constraints in CFSQP.
	* build-aux/boost.m4: Detect Boost.StaticAssert and Boost.TypeTraits.
	* configure.ac: Search for Boost.StaticAssert and Boost.TypeTraits.
	* include/liboptimization/cfsqp.hh, Split linear/non-linear constraints using
        Boost.Variant.
	* include/liboptimization/dummy.hh,
	* include/liboptimization/ipopt.hh,
	* include/liboptimization/problem.hh: Inherit now from Solver<F, const C*>
        instead of Solver<F, C> before (required to allow Variant constraints).
	* include/liboptimization/solver.hh: Fix constraints type.
	* src/cfsqp.cc: Implement linear/non-linear constraints splitting.
	* src/doc.hh: Fix main page name.